--- a/button-effects/index.css
+++ b/button-effects/index.css
@@ -11,16 +11,21 @@ body {
   flex-grow: 1;
   width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: flex-start;
   align-items: center;
 }
 
 a {
+  height: 40px;
+  width: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-decoration: none;
   font-family: sans-serif;
-  font-size: 45px;
-  border: 4px solid;
+  font-size: 20px;
+  border: 4px solid #272727;
   border-radius: 10px;
-  padding: 40px 80px;
   margin: 4px;
 }
