Editing button color

--- a/button-effects/glowing-style.css
+++ b/button-effects/glowing-style.css
@@ -1,5 +1,5 @@
 .glowing-effect{
-    background-color: #f44336;
+    background-color: #272727;
     color: white;
     position: relative;
     overflow: hidden;
